--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,7 +36,7 @@
     <fragment
             android:id="@+id/gameDetailFragment"
             android:name="de.r4md4c.gamedealz.detail.DetailsFragment"
-            app:layout="@layout/fragment_game_detail">
+            tools:layout="@layout/fragment_game_detail">
         <argument
                 android:name="plain_id"
                 app:argType="string"/>
