--- a/app/src/main/res/layout/layout_add_to_watch_list.xml
+++ b/app/src/main/res/layout/layout_add_to_watch_list.xml
@@ -62,6 +62,16 @@
             </FrameLayout>
 
             <TextView
+                    android:id="@+id/currentBest"
+                    android:layout_width="wrap_content"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
+                    app:layout_constraintTop_toBottomOf="@+id/priceContainer"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:text="@string/current_best"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
                     android:id="@+id/followingStoresTitle"
                     android:layout_width="0dp"
                     android:text="@string/on_the_following_stores"
@@ -75,7 +85,7 @@
                     android:layout_width="wrap_content"
                     android:checked="true"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/priceContainer"
+                    app:layout_constraintTop_toBottomOf="@+id/currentBest"
                     android:layout_height="wrap_content"/>
 
             <com.google.android.material.chip.ChipGroup
