--- a/app/src/main/res/layout/fragment_manage_watchlist.xml
+++ b/app/src/main/res/layout/fragment_manage_watchlist.xml
@@ -8,6 +8,7 @@
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_height="wrap_content"/>
 
