--- a/app/src/main/res/layout/layout_add_to_watch_list.xml
+++ b/app/src/main/res/layout/layout_add_to_watch_list.xml
@@ -23,6 +23,7 @@
             <TextView
                     android:id="@+id/notifyMeHeader"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:text="@string/notify_when_price_reaches"
@@ -74,6 +75,7 @@
             <TextView
                     android:id="@+id/followingStoresTitle"
                     android:layout_width="0dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     android:text="@string/on_the_following_stores"
                     app:layout_constraintTop_toTopOf="@+id/storeAllSwitch"
                     app:layout_constraintBottom_toBottomOf="@+id/storeAllSwitch"
