--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:id="@+id/toolbar"
-        android:background="?colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
         android:layout_height="?actionBarSize"
         xmlns:android="http://schemas.android.com/apk/res/android"/>
